add jenkinsfile to build ctp